tests/baselines/reference/assignmentCompatWithStringIndexer.errors.txt
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts(15,1): error TS2322: Type 'A' is not assignable to type '{ [x: string]: Derived; }'.
  Index signatures are incompatible.
    Property 'bar' is missing in type 'Base' but required in type 'Derived'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts(19,1): error TS2322: Type 'A' is not assignable to type '{ [x: string]: Derived2; }'.
  Index signatures are incompatible.
    Type 'Base' is missing the following properties from type 'Derived2': baz, bar
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts(33,5): error TS2322: Type 'A<Base>' is not assignable to type '{ [x: string]: Derived; }'.
  Index signatures are incompatible.
    Type 'Base' is not assignable to type 'Derived'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts(41,5): error TS2322: Type 'A<Base>' is not assignable to type '{ [x: string]: Derived2; }'.
  Index signatures are incompatible.
    Type 'Base' is not assignable to type 'Derived2'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts(46,9): error TS2322: Type '{ [x: string]: Derived; }' is not assignable to type 'A<T>'.
  Index signatures are incompatible.
    Type 'Derived' is not assignable to type 'T'.
      'Derived' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'Base'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts(47,9): error TS2322: Type 'A<T>' is not assignable to type '{ [x: string]: Derived; }'.
  Index signatures are incompatible.
    Type 'T' is not assignable to type 'Derived'.
      Type 'Base' is not assignable to type 'Derived'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts(50,9): error TS2322: Type '{ [x: string]: Derived2; }' is not assignable to type 'A<T>'.
  Index signatures are incompatible.
    Type 'Derived2' is not assignable to type 'T'.
      'Derived2' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'Base'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts(51,9): error TS2322: Type 'A<T>' is not assignable to type '{ [x: string]: Derived2; }'.
  Index signatures are incompatible.
    Type 'T' is not assignable to type 'Derived2'.
      Type 'Base' is not assignable to type 'Derived2'.


==== tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts (8 errors) ====
    // index signatures must be compatible in assignments
    
    interface Base { foo: string; }
    interface Derived extends Base { bar: string; }
    interface Derived2 extends Derived { baz: string; }
    
    class A {
        [x: string]: Base;
    }
    
    var a: A;
    
    var b: { [x: string]: Derived; }
    a = b; // ok
    b = a; // error
    ~
!!! error TS2322: Type '{|A|0|}' is not assignable to type '{ [x: string]: {|Derived|1|}; }'.
!!! error TS2322:   Index signatures are incompatible.
!!! error TS2322:     Property 'bar' is missing in type 'Base' but required in type 'Derived'.
!!! related TS2728 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:4:34: 'bar' is declared here.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:7:7
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:4:11
    
    var b2: { [x: string]: Derived2; }
    a = b2; // ok
    b2 = a; // error
    ~~
!!! error TS2322: Type '{|A|0|}' is not assignable to type '{ [x: string]: {|Derived2|1|}; }'.
!!! error TS2322:   Index signatures are incompatible.
!!! error TS2322:     Type 'Base' is missing the following properties from type 'Derived2': baz, bar
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:7:7
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:5:11
    
    module Generics {
        class A<T extends Base> {
            [x: string]: T;
        }
    
        class B extends A<Base> {
            [x: string]: Derived; // ok
        }
    
        var b1: { [x: string]: Derived; };
        var a1: A<Base>;
        a1 = b1; // ok
        b1 = a1; // error
        ~~
!!! error TS2322: Type '{|A|0|}<{|Base|1|}>' is not assignable to type '{ [x: string]: {|Derived|2|}; }'.
!!! error TS2322:   Index signatures are incompatible.
!!! error TS2322:     Type '{|Base|3|}' is not assignable to type '{|Derived|4|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:22:11
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:3:11
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:4:11
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:3:11
!!! annotated symbol 4 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:4:11
    
        class B2 extends A<Base> {
            [x: string]: Derived2; // ok
        }
    
        var b2: { [x: string]: Derived2; };
        a1 = b2; // ok
        b2 = a1; // error
        ~~
!!! error TS2322: Type '{|A|0|}<{|Base|1|}>' is not assignable to type '{ [x: string]: {|Derived2|2|}; }'.
!!! error TS2322:   Index signatures are incompatible.
!!! error TS2322:     Type '{|Base|3|}' is not assignable to type '{|Derived2|4|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:22:11
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:3:11
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:5:11
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:3:11
!!! annotated symbol 4 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:5:11
    
        function foo<T extends Base>() {
            var b3: { [x: string]: Derived; };
            var a3: A<T>;
            a3 = b3; // error
            ~~
!!! error TS2322: Type '{ [x: string]: {|Derived|0|}; }' is not assignable to type '{|A|1|}<{|T|2|}>'.
!!! error TS2322:   Index signatures are incompatible.
!!! error TS2322:     Type '{|Derived|3|}' is not assignable to type '{|T|4|}'.
!!! error TS2322:       '{|Derived|5|}' is assignable to the constraint of type '{|T|6|}', but '{|T|7|}' could be instantiated with a different subtype of constraint '{|Base|8|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:4:11
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:22:11
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:43:18
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:4:11
!!! annotated symbol 4 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:43:18
!!! annotated symbol 5 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:4:11
!!! annotated symbol 6 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:43:18
!!! annotated symbol 7 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:43:18
!!! annotated symbol 8 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:3:11
            b3 = a3; // error
            ~~
!!! error TS2322: Type '{|A|0|}<{|T|1|}>' is not assignable to type '{ [x: string]: {|Derived|2|}; }'.
!!! error TS2322:   Index signatures are incompatible.
!!! error TS2322:     Type '{|T|3|}' is not assignable to type '{|Derived|4|}'.
!!! error TS2322:       Type '{|Base|5|}' is not assignable to type '{|Derived|6|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:22:11
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:43:18
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:4:11
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:43:18
!!! annotated symbol 4 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:4:11
!!! annotated symbol 5 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:3:11
!!! annotated symbol 6 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:4:11
    
            var b4: { [x: string]: Derived2; };
            a3 = b4; // error
            ~~
!!! error TS2322: Type '{ [x: string]: {|Derived2|0|}; }' is not assignable to type '{|A|1|}<{|T|2|}>'.
!!! error TS2322:   Index signatures are incompatible.
!!! error TS2322:     Type '{|Derived2|3|}' is not assignable to type '{|T|4|}'.
!!! error TS2322:       '{|Derived2|5|}' is assignable to the constraint of type '{|T|6|}', but '{|T|7|}' could be instantiated with a different subtype of constraint '{|Base|8|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:5:11
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:22:11
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:43:18
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:5:11
!!! annotated symbol 4 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:43:18
!!! annotated symbol 5 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:5:11
!!! annotated symbol 6 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:43:18
!!! annotated symbol 7 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:43:18
!!! annotated symbol 8 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:3:11
            b4 = a3; // error
            ~~
!!! error TS2322: Type '{|A|0|}<{|T|1|}>' is not assignable to type '{ [x: string]: {|Derived2|2|}; }'.
!!! error TS2322:   Index signatures are incompatible.
!!! error TS2322:     Type '{|T|3|}' is not assignable to type '{|Derived2|4|}'.
!!! error TS2322:       Type '{|Base|5|}' is not assignable to type '{|Derived2|6|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:22:11
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:43:18
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:5:11
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:43:18
!!! annotated symbol 4 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:5:11
!!! annotated symbol 5 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:3:11
!!! annotated symbol 6 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer.ts:5:11
        }
    }